; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/smd/extr_smd.c_smd_packet_read_avail.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/smd/extr_smd.c_smd_packet_read_avail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smd_channel = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.smd_channel*)* @smd_packet_read_avail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smd_packet_read_avail(%struct.smd_channel* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.smd_channel*, align 8
  %4 = alloca i32, align 4
  store %struct.smd_channel* %0, %struct.smd_channel** %3, align 8
  %5 = load %struct.smd_channel*, %struct.smd_channel** %3, align 8
  %6 = getelementptr inbounds %struct.smd_channel, %struct.smd_channel* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %23

9:                                                ; preds = %1
  %10 = load %struct.smd_channel*, %struct.smd_channel** %3, align 8
  %11 = call i32 @smd_stream_read_avail(%struct.smd_channel* %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.smd_channel*, %struct.smd_channel** %3, align 8
  %14 = getelementptr inbounds %struct.smd_channel, %struct.smd_channel* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = icmp sgt i32 %12, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %9
  %18 = load %struct.smd_channel*, %struct.smd_channel** %3, align 8
  %19 = getelementptr inbounds %struct.smd_channel, %struct.smd_channel* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %17, %9
  %22 = load i32, i32* %4, align 4
  store i32 %22, i32* %2, align 4
  br label %24

23:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %21
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @smd_stream_read_avail(%struct.smd_channel*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
